flights-rain-report.txt
FAIL node --check :: /tmp/app.c.js:2037
  var HEMUS=/(袙袗袪袧袗|楔校袦袝袧|袪校小袝|袪袗袟袚袪袗袛|孝歇袪袚袨袙袠些袝|袙袝袥袠袣袨 孝歇袪袧袨袙袨|袙\. ?孝歇袪袧袨袙袨|袚袗袘袪袨袙袨|袩袥袝袙袝袧|袥袨袙袝效|小袝袙袥袠袝袙袨|袘携袥袗|袛袨袘袪袠效|小袠袥袠小孝袪袗|袘袨孝袝袙袚袪袗袛|袩袪袗袙袝笑/i;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

SyntaxError: Invalid regular expression: /(袙袗袪袧袗|楔校袦袝袧|袪校小袝|袪袗袟袚袪袗袛|孝歇袪袚袨袙袠些袝|袙袝袥袠袣袨 
